--- a/index.html
+++ b/index.html
@@ -5,76 +5,67 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-  Hello world
-  <script>
-    let firstnum = parseInt(prompt('First number = '));
-    let secondnum = parseInt(prompt('Second number = '));
-    let usersChoice = prompt('Enter one of these [/, *, +, - %] = ');
+<body class="text-center text-sm ">
+  <div id="wrapper" class="bg-green-900">
+    <div>
+      <p class="text-white p-4 py-10  ">
+        Need to practice self-care? what if I told you that you could have a spa in your own bathroom? Sounds good
+        right? it's given luxury. try our self-care bundu today the ultimate trail buddy b t and exfoliating body Polish
+        products that are needed to upgrade your birth experience luxurious and efficacious formulated and guaranteed to
+        give you beautiful healthy glowing skin.
+      </p>
+    </div>
 
-    let add = "+";
-    let sub = "-";
-    let mul = "*";
-    let div = "/";
-    let rem = "%";
+    <div class="flex ">
+      <div class="flex flex-wrap justify-center">
+        <div class="w-50  px-4">
+          <img src="https://www.creative-tim.com/learning-lab/tailwind-starter-kit/img/team-3-800x800.jpg" alt="..."
+            class="shadow-lg rounded max-w-full h-auto align-middle border-none" />
+        </div>
+      </div>
 
-    // if (usersChoice === add){
-    //     alert(".........Answer........");
-    //   alert('Addition = ' + (firstnum + secondnum));
-    // }
-    // else if(usersChoice === sub){
-    //     alert(".........Answer........");
-    //     alert('Subtraction = ' + (firstnum-secondnum));
-    // }
-    // else if(usersChoice === mul){
-    //     alert(".........Answer........");
-    //     alert('Multiplication = ' + (firstnum*secondnum));
-    // }
-    // else if(usersChoice === div){
-    //     alert(".........Answer........");
-    //     alert('Division = ' + (firstnum/secondnum));
-    // }
-    // else if(usersChoice === rem){
-    //     alert(".........Answer........");
-    //     alert('Modulo = ' + (firstnum%secondnum));
-    // }
+      <div class="flex flex-wrap justify-center">
+        <div class="w-50 px-4">
+          <img src="https://www.creative-tim.com/learning-lab/tailwind-starter-kit/img/team-3-800x800.jpg" alt="..."
+            class="shadow-lg rounded max-w-full h-auto align-middle border-none" />
+        </div>
+      </div>
 
+    </div>
 
+    <div class="">
+      <p class="text-white p-2 mt-10 ">
+        PS did we mention that each bundle comes with their own playlist specifically made to curate the message sent
+      </p>
+    </div>
 
-    switch (usersChoice) {
-      case add:
-        alert(".........Answer........");
-        alert('Addition = ' + (firstnum + secondnum));
-        break;
+    <div class="">
+      <p class="text-white  ">yep &#128526;. it's really the ultimate self-care experience.</p>
+    </div>
 
-      case sub:
-        alert(".........Answer........");
-        alert('Subtraction = ' + (firstnum - secondnum));
-        break;
+    <div class="p-2 mt-5">
+      <a href="#"
+        class="bg-white text-green active:bg-white-600 font-bold uppercase text-xs px-5 py-2 rounded-full shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150 p-4 py-10">SHOP
+        NOW</a>
+    </div>
 
-      case mul:
-        alert(".........Answer........");
-        alert('Multiplication = ' + (firstnum * secondnum));
-        break;
+    <div>
+      <p class="text-white p-2 py-10">follow us on social media to keep up with all Good things clothing essence. we
+        will take you along our holiday journey</p>
+    </div>
+    <div class="flex  justify-center ">
+      <div>
+        <a target="_blank" href="#"><img src="fb.png" class="h-10 w-10"></a>
+      </div>
+      <div>
+        <a target="_blank" href="#"><img src="ig.png" class="h-10 w-10"></a>
+      </div>
+    </div>
 
-      case div:
-        alert(".........Answer........");
-        alert('Division = ' + (firstnum / secondnum));
-        break;
-
-      case rem:
-        alert(".........Answer........");
-        alert('Modulo = ' + (firstnum % secondnum));
-        break;
-      default:
-        alert(".........Syntax Error........");
-        alert('This is not a valid operaton');
-    }
-  </script>
+  </div>
 </body>
 
 </html>
-
